# saburou-platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  refactor_platform.sh
decisions/: decisions_en.md  decisions_es.md
saburou_platform/include/saburou/detail/macros/: cppxx_guard.hpp  pragma.hpp
saburou_platform/include/saburou/macros/: cppxx_guard.hpp
saburou_platform/include/saburou/platform/: v1.hpp  v2-alpha.hpp  v2.hpp
saburou_platform/include/saburou/platform/detail/gen1/: core_guard.hpp  macros.hpp
saburou_platform/include/saburou/platform/detail/gen1/env_cleanup/: cleanup.hpp  recover.hpp
saburou_platform/include/saburou/platform/v1/: changelog.md  core.hpp  detect.hpp  os.hpp
saburou_platform/include/saburou/platform/v1/env/: cleanup.hpp
saburou_platform/include/saburou/platform/v1/os/: family.hpp  info.hpp  linux.hpp  type.hpp
saburou_platform/include/saburou/platform/v1/os/family/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v1/os/info/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v1/os/linux/: distro.hpp  types.hpp
saburou_platform/include/saburou/platform/v1/os/type/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v2/: changelog.md  core.hpp  detect.hpp  os.hpp
saburou_platform/include/saburou/platform/v2-alpha/: core.hpp  detect.hpp  os.hpp
saburou_platform/include/saburou/platform/v2-alpha/env/: recover.hpp
saburou_platform/include/saburou/platform/v2-alpha/os/: family.hpp  info.hpp  linux.hpp  type.hpp
saburou_platform/include/saburou/platform/v2-alpha/os/family/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v2-alpha/os/info/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v2-alpha/os/linux/: distro.hpp  types.hpp
saburou_platform/include/saburou/platform/v2-alpha/os/type/: query.hpp  types.hpp
saburou_platform/include/saburou/platform/v2/bytes/: byte_swap.hpp  endian.hpp
saburou_platform/include/saburou/platform/v2/os/: family.hpp  info.hpp  linux.hpp  type.hpp
saburou_platform/src/: main.cpp
utils/: refactor_platform.sh
(+13 files in other folders)
